force-app/main/default/objects/Stock_Alert__c/Stock_Alert__c.object-meta.xml
<CustomObject>
    <label>Stock Alert</label>
    <nameField>
        <displayFormat>ALERT-{00000}</displayFormat>
        <label>Alert Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>