force-app/main/default/objects/Stock_Alert__c/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <label>Action Taken</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>