force-app/main/default/objects/Stock_Alert__c/fields/Alert_Type__c.field-meta.xml
<CustomField>
    <fullName>Alert_Type__c</fullName>
    <label>Alert Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low_Stock</fullName>
                <label>Low Stock</label>
            </value>
            <value>
                <fullName>Expiring_Soon</fullName>
                <label>Expiring Soon</label>
            </value>
            <value>
                <fullName>Overstock</fullName>
            </value>
            <value>
                <fullName>Stockout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>