force-app/main/default/objects/Stock_Alert__c/fields/Days_Until_Stockout__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Stockout__c</fullName>
    <label>Days Until Stockout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>