force-app/main/default/objects/Stock_Alert__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Stock Alerts</relationshipLabel>
    <relationshipName>Stock_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>