force-app/main/default/objects/Stock_Alert__c/fields/Purchase_Order_Created__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Created__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order Created</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Stock Alerts</relationshipLabel>
    <relationshipName>Stock_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>