force-app/main/default/objects/Stock_Alert__c/fields/Slack_Approval_Received__c.field-meta.xml
<CustomField>
    <fullName>Slack_Approval_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Slack Approval Received</label>
    <type>Checkbox</type>
</CustomField>