force-app/main/default/objects/Stock_Alert__c/fields/Slack_Message_Sent__c.field-meta.xml
<CustomField>
    <fullName>Slack_Message_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Slack Message Sent</label>
    <type>Checkbox</type>
</CustomField>